@@ -7,14 +7,13 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * Simple in-memory queue for tracking job statuses
  */
 public class MemoryBatchQueue extends JobQueueCommon {
 
-    private static Logger logger = LoggerFactory.getLogger(MemoryBatchQueue.class);
+    private static final Logger logger = LoggerFactory.getLogger(MemoryBatchQueue.class);
 
     private final Map<UUID, JobQueueBatch> queue;
 
@@ -47,7 +46,7 @@ public class MemoryBatchQueue extends JobQueueCommon {
     public synchronized List<JobQueueBatch> getJobBatches(UUID jobID) {
         return this.queue.values().stream()
                 .filter(batch -> batch.getJobID().equals(jobID))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
